Updated Falling Blocks game

--- a/FallingBlocks.html
+++ b/FallingBlocks.html
@@ -71,6 +71,7 @@ class FallingBlocks {
         this.defaultBackgroundColor = "#000";
         this.pieces = {
             "I": ["RRRR"],
+            "Q": ["BBB"," B "],
             "T": ["RTR", "RRR"],
             "O": ["YY", "YY"],
             "S": [" GG", "GG "],
